Added a new project, BulkUploader, to allow uploading quote data and images via console app. (LINQPad upload script is deprecated - do not use.) On the search results page, no longer showing a thumbnail as it was too small to be decipherable. Add a new table repository to keep track of the number of views/impressions of a quote. Changed the Quote RowKey Quote from Guid to int as randomizing an int is much easier and controllable.

--- a/Client/Pages/Quotes/Components/QuoteList.razor
+++ b/Client/Pages/Quotes/Components/QuoteList.razor
@@ -5,16 +5,7 @@
             foreach (var quote in this.Quotes)
             {
                 <tr class="pointer" @onclick="@(e => DisplayQuoteAsync(quote))">
-                    <td>
-                        @if (quote?.Base64ThumbnailImage is not null)
-                        {
-                            <img src="data:image;base64,@quote?.Base64ThumbnailImage" class="img-thumbnail card-maxwidth" />
-                        }
-                        else
-                        {
-                            <img src="images/1px.png" />
-                        }
-                    </td>
+                    <td><span class="oi @(quote.SearchPanelVisibilityClass ?? ClosedIcon)"></span></td>
                     <td>
                         @quote.Text
                         @if (quote.SearchShowBusyIndicator == true)
@@ -22,12 +13,11 @@
                             <BusyIndicator />
                         }
                     </td>
-                    <td class="text-right"><span class="oi @(quote.SearchPanelVisibilityClass ?? ClosedIcon)"></span></td>
                 </tr>
                 @if (quote.SearchShowResizedImage == true)
                 {
                     <tr class="pointer" @onclick="@(e => DisplayQuoteAsync(quote))">
-                        <td colspan="3">
+                        <td colspan="2">
                             <QuoteDisplay Quote="quote" />
                         </td>
                     </tr>
