Casing change from In.Faux to in.faux when displayed to the user.

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         </div>
 
         <div class="content px-4" id="footer">
-            <div id="powered-by"><a href="https://www.noftware.com" target="_blank" title="Noftware Software website">Powered by In.Faux | <img src="images/Noftware16.png" alt="Noftware logo" /> Noftware Software Ltd. &copy; @DateTime.Now.Year</a></div>
+            <div id="powered-by"><a href="https://www.noftware.com" target="_blank" title="Noftware Software website">Powered by in.faux | <img src="images/Noftware16.png" alt="Noftware logo" /> Noftware Software Ltd. &copy; @DateTime.Now.Year</a></div>
         </div>
     </div>
 </div>
