Upgraded from .NET 5 to .NET 7. Refactored some code, specifically around the names of variables/properties in the client. Using built-in <PageTitle> to see the page title. Updated to the latest nuget packages. Resizing images via ImageSharp.

--- a/Client/Pages/Quotes/Components/QuoteRandom.razor
+++ b/Client/Pages/Quotes/Components/QuoteRandom.razor
@@ -1,8 +1,8 @@
-﻿@if (_quote is null)
+﻿@if (Quote is null)
 {
     <BusyIndicator />
 }
 else
 {
-    <QuoteDisplay Quote="@_quote" />
+    <QuoteDisplay Quote="@this.Quote" />
 }
