--- a/Client/Pages/Quotes/Timer.razor
+++ b/Client/Pages/Quotes/Timer.razor
@@ -1,4 +1,4 @@
 ﻿@page "/timer"
 
-<Title Value="Auto-refresh"></Title>
+<PageTitle>Auto-refresh</PageTitle>
 <QuoteTimer TimerRefreshSeconds="@SecondsRefresh" />
