--- a/Client/Pages/Quotes/Components/QuoteButton.razor
+++ b/Client/Pages/Quotes/Components/QuoteButton.razor
@@ -1,9 +1,9 @@
-﻿@if (_quote is null)
+﻿@if (this.Quote is null)
 {
     <BusyIndicator />
 }
 else
 {
     <button @onclick="@GetRandomOnClickAsync" class="btn btn-primary"><i class="fas fa-random"></i> Get Random @Configuration["TextName"]</button>
-    <QuoteDisplay Quote="@_quote" />
+    <QuoteDisplay Quote="@this.Quote" />
 }
