--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -11,7 +11,11 @@
         </div>
 
         <div class="content px-4" id="footer">
-            <div id="powered-by"><a href="https://www.noftware.com" target="_blank" title="Noftware Software website">Powered by in.faux | <img src="images/Noftware16.png" alt="Noftware logo" /> Noftware Software Ltd. &copy; @DateTime.Now.Year</a></div>
+            <div id="powered-by">
+                <a href="https://github.com/noftwaresoftware/in.faux" target="_blank" title="in.faux github website">Powered by in.faux | <img src="images/Noftware16.png" alt="Noftware logo" /> Noftware Software Ltd. &copy; @DateTime.Now.Year</a>
+                <br />
+                <div>Microsoft&reg; Blazor @System.Runtime.InteropServices.RuntimeInformation.FrameworkDescription</div>
+            </div>
         </div>
     </div>
 </div>
