--- a/Client/Shared/MainLayout.razor.css
+++ b/Client/Shared/MainLayout.razor.css
@@ -9,11 +9,10 @@
 }
 
 .sidebar {
-    background-image: linear-gradient(180deg, #1B5B2D 0%, #32A853 70%);
+    background: linear-gradient(180deg, rgba(0,31,88,1) 0%, rgba(0,91,171,1) 74%);
 }
 
 @media (max-width: 640.98px) {
-
 }
 
 @media (min-width: 641px) {
