--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -30,6 +30,9 @@
             </NavLink>
         </li>
     </ul>
+    <div class="text-center">
+        <img src="images/Logo.png" width="125" height="125" />
+    </div>
 </div>
 
 @code {
